--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,23 @@
 version: "3.9"
 
 services:
-  api:
+  api01: &api
+    # image: ana/minha-api-matadora:latest
     build:
       context: .
       dockerfile: Dockerfile
+    hostname: api01
+    environment:
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - DATABASE_DBNAME=${DATABASE_DBNAME}
     ports:
-      - "8080:3000"
+      - "8081:3000"
     depends_on:
       db:
         condition: service_healthy
-
-  api01: &api
-    # Lembre-se de que seu serviço HTTP deve estar hospedado num repositório
-    # publicamente acessível! Ex.: hub.docker.com
-    image: ana/minha-api-matadora:latest
-    hostname: api01
-    environment:
-      - DB_HOSTNAME=db
-    
-    # Não é necessário expor qualquer porta além da porta do load balancer,
-    # mas é comum as pessoas o fazerem para testarem suas APIs e conectarem
-    # ao banco de dados na fase de desenvolvimento.
-    ports:
-      - "8081:8080"
-    depends_on:
-      - db
     deploy:
       resources:
         limits:
@@ -33,13 +25,10 @@ services:
           memory: "200MB"
 
   api02:
-    # Essa sintaxe reusa o que foi declarado em 'api01'.
     <<: *api 
     hostname: api02
-    environment:
-      - DB_HOSTNAME=db
     ports:
-      - "8082:8080"
+      - "8082:3000"
  
   nginx:
     image: nginx:latest
@@ -58,11 +47,11 @@ services:
 
   db:
     image: postgres:16.2-alpine3.19
-    hostname: db
+    hostname: ${DATABASE_HOST}
     environment:
-      - POSTGRES_PASSWORD=123
-      - POSTGRES_USER=admin
-      - POSTGRES_DB=rinha
+      - POSTGRES_USER=${DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=${DATABASE_DBNAME}
     ports:
       - 5432:5432
     volumes:
